2006-03-20  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Added exit handler to clean up the interp
	where the console window lives.

2006-03-18  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: fix for undo/modified status of text
	widgets when empty strings are inserted and undone.

2006-03-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/clrpick.tcl:   bug #1451587: avoid using abbreviated
	* library/palette.tcl:   sub-commands in core scripts as this
	* library/scale.tcl:     can cause problems with mega-widget 
	* library/scrlbar.tcl:   libraries like snit.
	* library/tkfbox.tcl:
	* library/xmfbox.tcl:

2006-03-16  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Substantial rewrite of [console] support.
	* generic/tkInt.h:	Included Obj-ification of the [console] and
	[consoleinterp] commands, and reworking of all the supporting data
	structures for cleaner sharing and lifetime management especially
	in multi-threaded configurations.

2006-03-16  Donal K. Fellows  <dkf@users.sf.net>

	* library/msgs/pt.msg: Messages for Portuguese (strictly just for
	Brazilian Portuguese, but they'll do until we get other Portuguese
	speakers localize) from Ricardo Jorge <ricardoj@users.sf.net> and
	Silas Justiano <silasj@users.sf.net>. Many thanks! [Bug 1405069]

	* generic/tkImgPhoto.c (ImgPhotoCmd, Tk_PhotoPutBlock)
	(Tk_PhotoPutZoomedBlock): Added hack to detect copying of a photo with
	a simple alpha channel and skip calling ToggleComplexAlphaIfNeeded.
	This should speed up many photo-to-photo copies, keeping the cost of
	the alpha channel down.

2006-03-15  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock): Try
	to squelch performance issue with code that writes to large images by
	single pixels. Masses of thanks to George Staplin for helping to trace
	this down to the COMPLEX_ALPHA flag handling code. [Bug 1409140]
